<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools   = "http://schemas.android.com/tools"
    android:id="@+id/LLPadre"
    android:layout_width  ="match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    android:theme = "@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/hojas"
    tools:context = ".ui.fragments.Preguntas_fragment">

    <!--########################### Pregunta ###########################-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30">
        <TextView
            android:id="@+id/txtPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/quicksand_light"
            android:paddingHorizontal="15dp"
            android:text="@string/txtTextoEspera"
            android:textColor="@color/black"
            android:textSize="@dimen/FPreguntaTextView"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
    </RelativeLayout>

    <!--########################### Opciones ###########################-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".40">
        <RelativeLayout
            android:id="@+id/RLOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <!--######## Opcion 1 ########-->
            <RelativeLayout
                android:id="@+id/RLOpcion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/opciones"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/margenHorizontalOpciones">
                <TextView
                    android:id="@+id/txtOpcion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margenVerticalTextoOpciones"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/txtOpcion1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/FPreguntaTextViewOpciones"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>
            </RelativeLayout>

            <!--######## Opcion 2 ########-->
            <RelativeLayout
                android:id="@+id/RLOpcion2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/RLOpcion1"
                android:background="@drawable/opciones"
                android:layout_marginTop="@dimen/marginTopRLOpciones"
                android:layout_marginHorizontal="@dimen/margenHorizontalOpciones">
                <TextView
                    android:id="@+id/txtOpcion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margenVerticalTextoOpciones"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/txtOpcion2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/FPreguntaTextViewOpciones"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>
            </RelativeLayout>

            <!--######## Opcion 3 ########-->
            <RelativeLayout
                android:id="@+id/RLOpcion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLOpcion2"
                android:background="@drawable/opciones"
                android:layout_marginTop="@dimen/marginTopRLOpciones"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="@dimen/margenHorizontalOpciones">
                <TextView
                    android:id="@+id/txtOpcion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margenVerticalTextoOpciones"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/txtOpcion3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/FPreguntaTextViewOpciones"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <!--########################### Respuesta ###########################-->
    <RelativeLayout
        android:id="@+id/RLRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30">
        <TextView
            android:id="@+id/txtRespuesta"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="15dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/txtRespuesta"
            android:textColor="@color/black"
            android:textSize="@dimen/FPreguntaTextViewRespuesta"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
    </RelativeLayout>

</LinearLayout>